# i2c_data

./: README.md  README.txt  i2c_data.py  pyproject.toml  requirements.txt
src/i2c_data/: __init__.py  __main__.py  i2c_data.py
