[project]
name = "aselo_i2c_data"
version = "0.1.0"
description = "A small example package"
requires-python = ">=3.8"
authors = [{ name = "Sébastien LENOIR", email = "sebastien.lenoir@aselo.fr" }]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [ # Optional
    "i2cdevice==1.0.0",
    "icm20948==0.0.2",
    "pimoroni-bme280==1.0.0",
    "smbus==1.1.post2",
    "smbus2==0.4.3",
]

[project.urls]
Homepage = "https://github.com/sebastienlenoir/i2c_data"
Issues = "https://github.com/sebastienlenoir/i2c_data/issues"

[build-system]
# These are the assumed default build requirements from pip:
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
